<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.tiantiannews.ui.widget.AppBar
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/app_bar_height"
        android:background="@color/white"
        android:elevation="@dimen/offset_2"></com.tiantiannews.ui.widget.AppBar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/offset_16"
        android:background="@drawable/bg_white"
        android:elevation="@dimen/offset_2"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="@dimen/offset_8">

            <ImageView
                android:layout_width="@dimen/offset_24"
                android:layout_height="@dimen/offset_24"
                android:contentDescription="@string/image"
                android:src="@drawable/ic_username_icon" />

            <com.tiantiannews.ui.widget.DeleteEditText
                android:id="@+id/et_login_name"
                android:layout_width="match_parent"
                android:layout_height="@dimen/offset_48"
                android:layout_marginLeft="@dimen/offset_8"
                android:background="@null"
                android:hint="@string/hint_username"
                android:textSize="@dimen/font_size_16" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginLeft="@dimen/offset_40"
            android:background="@color/black_divers" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="@dimen/offset_8">

            <ImageView
                android:layout_width="@dimen/offset_24"
                android:layout_height="@dimen/offset_24"
                android:contentDescription="@string/image"
                android:src="@drawable/ic_pwd_icon" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/offset_8">

                <com.tiantiannews.ui.widget.DeleteEditText
                    android:id="@+id/et_login_pass"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/offset_48"
                    android:layout_marginRight="@dimen/offset_8"
                    android:layout_toLeftOf="@+id/img_pass_visible"
                    android:background="@null"
                    android:hint="@string/hint_password"
                    android:inputType="textPassword"
                    android:textSize="@dimen/font_size_16" />

                <com.tiantiannews.ui.widget.PassVisibleCheckBox
                    android:id="@+id/img_pass_visible"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="@dimen/offset_8"
                    android:layout_toLeftOf="@+id/tv_login_forget_pass"
                    android:button="@drawable/pass_word_visible"
                    android:checked="false" />

                <TextView
                    android:id="@+id/tv_login_forget_pass"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:text="@string/freget_pass_word" />
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="@dimen/offset_40"
        android:layout_marginLeft="@dimen/offset_16"
        android:layout_marginRight="@dimen/offset_16"
        android:background="@drawable/bg_white"
        android:text="@string/login"
        android:textColor="@color/gray"
        android:textSize="@dimen/font_size_18" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/offset_16"
        android:layout_marginRight="@dimen/offset_16"
        android:layout_marginTop="@dimen/offset_16"
        android:text="@string/other_login"
        android:textColor="@color/gray"
        android:textSize="@dimen/font_size_12" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/offset_16"
        android:layout_marginRight="@dimen/offset_16"
        android:layout_marginTop="@dimen/offset_8"
        android:background="@drawable/bg_white"
        android:elevation="@dimen/offset_2"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/offset_32"
            android:layout_marginTop="@dimen/offset_32"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_login_chat"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/offset_8"
                android:layout_weight="1"
                android:drawablePadding="@dimen/offset_8"
                android:drawableTop="@drawable/ic_login_way_wx_normal"
                android:gravity="center"
                android:text="@string/wei_xing_login"
                android:textSize="@dimen/font_size_16" />


            <TextView
                android:id="@+id/tv_login_blog"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/offset_8"
                android:layout_weight="1"
                android:drawablePadding="@dimen/offset_8"
                android:drawableTop="@drawable/ic_login_way_blog_normal"
                android:gravity="center"
                android:text="@string/sina_login"
                android:textSize="@dimen/font_size_16" />


            <TextView
                android:id="@+id/tv_login_qq"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/offset_8"
                android:layout_weight="1"
                android:drawablePadding="@dimen/offset_8"
                android:drawableTop="@drawable/ic_login_way_qq_normal"
                android:gravity="center"
                android:text="@string/qq_login"
                android:textSize="@dimen/font_size_16" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginLeft="@dimen/offset_8"
            android:layout_marginRight="@dimen/offset_8"
            android:background="@color/black_divers" />

        <TextView
            android:id="@+id/tv_login_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/offset_8"
            android:text="@string/no_account_go_register"
            android:textSize="@dimen/font_size_14" />
    </LinearLayout>


</LinearLayout>